<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="city"
            type="com.itis.androidspringcourseitis.domain.entity.Weather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_weather_in"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_city"
            android:layout_marginTop="40dp"
            android:textColor="@color/black" />


        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{city.name}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header" />

        <TextView
            android:id="@+id/tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{city.countryName}"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_city"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{city.date}"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tv_country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            android:transitionName="@string/transaction_poster"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_current_time" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/tv_temp(city.temp)}"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/iv_weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{city.desc}"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_realfeel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/tv_realfeel(city.feelsLike)}"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/temp_0"
            app:layout_constraintTop_toBottomOf="@id/tv_weather"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".77" />


        <TextView
            android:id="@+id/tv_humidity_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/humidity"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/gl_panel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_wind_header" />

        <TextView
            android:id="@+id/tv_wind_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/wind"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/gl_panel"
            app:layout_constraintStart_toEndOf="@id/tv_humidity_header"
            app:layout_constraintEnd_toStartOf="@id/tv_direction_header" />

        <TextView
            android:id="@+id/tv_direction_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/direction"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/gl_panel"
            app:layout_constraintStart_toEndOf="@id/tv_wind_header"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_panel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.81" />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{@string/tv_humidity(city.humidity)}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/gl_panel2"
            app:layout_constraintStart_toStartOf="@id/tv_humidity_header"
            app:layout_constraintEnd_toEndOf="@id/tv_humidity_header" />

        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{@string/tv_wind(city.windSpeed)}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/gl_panel2"
            app:layout_constraintStart_toStartOf="@id/tv_wind_header"
            app:layout_constraintEnd_toEndOf="@id/tv_wind_header" />

        <TextView
            android:id="@+id/tv_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{city.windDir}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/gl_panel2"
            app:layout_constraintStart_toStartOf="@id/tv_direction_header"
            app:layout_constraintEnd_toEndOf="@id/tv_direction_header" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_panel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />

        <TextView
            android:id="@+id/tv_sunrise_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/sunrise"
            android:textAllCaps="true"
            android:textColor="@color/temp_30"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintTop_toBottomOf="@id/gl_panel3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_sunset_header" />

        <TextView
            android:id="@+id/tv_sunset_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/sunset"
            android:textAllCaps="true"
            android:textColor="@color/temp_40"
            app:layout_constraintTop_toBottomOf="@id/gl_panel3"
            app:layout_constraintStart_toEndOf="@id/tv_sunrise_header"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{city.sunrise}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/gl_panel4"
            app:layout_constraintStart_toStartOf="@id/tv_sunrise_header"
            app:layout_constraintEnd_toEndOf="@id/tv_sunrise_header" />

        <TextView
            android:id="@+id/tv_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@{city.sunset}"
            android:textAllCaps="true"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/gl_panel4"
            app:layout_constraintStart_toStartOf="@id/tv_sunset_header"
            app:layout_constraintEnd_toEndOf="@id/tv_sunset_header" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_panel4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
